# SWC-class-decorator-plugin

./: .gitignore  Cargo.toml  README.md  package.json
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/__swc_snapshots__/transform/src/lib.rs/: boo.js
