[package]
name = "swc_class_decorator_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.218" }
serde_json = { version = "1.0.140" }
swc_core = { version = "16.0.0", features = ["ecma_plugin_transform"] }
swc_class_decorator = { path = "./transform" }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
