[package]
name = "swc_class_decorator"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.218" }
swc_core = { version = "16.0.0", features = ["ecma_plugin_transform"] }
swc_ecma_parser = { version = "10.0.0" }
swc_ecma_utils = { version = "11.0.0" }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
