[package]
name = "swc_class_decorator"
version = "0.2.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
serde = { version = "1.0.228" }
swc_core = { version = "55.0.2", features = ["ecma_plugin_transform"] }
swc_ecma_parser = { version = "33.0.0" }
swc_ecma_utils = { version = "26.0.1" }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
